--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
-
+**/.terraform.lock.*
 # Crash log files
 crash.log
 crash.*.log
@@ -15,6 +15,8 @@ crash.*.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+**/assignment1
+**/assignment1.pub
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
