--- a/.github/workflows/push_mysql_to_ECR.yml
+++ b/.github/workflows/push_mysql_to_ECR.yml
@@ -32,7 +32,7 @@ jobs:
         ECR_REPOSITORY: mysql
         IMAGE_TAG: v0.1
       run: |
-        cd terraform
+        cd application/
         ls -ltra
         # Docker build
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --file Dockerfile_mysql .
